# monpy

./: .gitignore  .mojo-version  LICENSE  README.md  flake.nix  pyproject.toml
.github/scripts/: posts.py  set-mojo-flags.py
.github/workflows/: bench-array-core.yml  ci.yml  wheels.yml
benches/: bench_mojo_sweep.mojo  bench_numojo_sweep.mojo  bench_parallel.mojo  bench_reduce.mojo  bench_threading_sweep.mojo
benchmarks/: bench_array_core.py  bench_strided.py  post_array_core_benchmark.py
docs/: api-surface.md  apple-backends.md  architecture.md  bench-loop-2026-05-07.md  benchmarks.md  cute-layout.md  ffi-marshaling.md  layout.md  mojo-setup-design.md  numpy-port-gaps.md  opts.md  roadmap.md  scipy-jax-port-gaps.md
docs/research/: blas-lapack-dispatch.md  complex-kernels.md  cute-layout-algebra.md  dtype-promotion-casting.md  einsum-contraction.md  formal-verification.md  index.md  jax-first-architecture.md  matrix-power.md  memory-alignment.md  meshgrid-stride-semantics.md  recent-field-notes.md  simd-vectorisation.md
examples/: gpt.py  tiny_gpt.py
python/monpy/: __init__.py  _dlpack.py  _jax.py  _native.pyi  array_api.py  linalg.py  random.py  utils.py
python/monpy/_bench/: __init__.py  core.py  mojo_sweep.py  profile.py  sweep.py
python/monpy/_src/: __init__.py  abstract.py  api.py  core.py  dtypes.py  layout.py  tree_util.py
python/monpy/extend/: __init__.py  core.py  lowering.py  mlir_or_max.py
python/monpy/kernels/: __init__.py  api.py  dsl.py  dtypes.py  graph.py  ir.py  layout.py  tensor.py  trace.py
python/monpy/lax/: __init__.py
python/monpy/nn/: __init__.py
python/monumpy/: __init__.py
scripts/: build_simple_index.py
src/: accelerate.mojo  array.mojo  buffer.mojo  create.mojo  domain.mojo  elementwise.mojo  layout.mojo  lib.mojo  linalg.mojo  matmul.mojo  metadata.mojo  native.mojo  native_accelerate.mojo  native_kernels.mojo  native_types.mojo  reductions.mojo  storage.mojo  views.mojo
src/array/: __init__.mojo  accessors.mojo  cast.mojo  dispatch.mojo  factory.mojo  result_dtypes.mojo
src/create/: __init__.mojo  _complex_helpers.mojo  creation_ops.mojo  dtype_ops.mojo  elementwise_ops.mojo  linalg.mojo  linalg_ops.mojo  reduction_ops.mojo  shape_ops.mojo
src/cute/: __init__.mojo  functional.mojo  int_tuple.mojo  iter.mojo  layout.mojo
src/elementwise/: __init__.mojo  accelerate_dispatch.mojo  apply_scalar.mojo  binary_dispatch.mojo  complex_kernels.mojo  dispatch_helpers.mojo  fused_kernels.mojo  linalg_kernels.mojo  matmul.mojo  nn_ops.mojo  predicates.mojo  reduce_kernels.mojo  strided_walkers.mojo  tile_kernels.mojo  typed_kernels.mojo  unary_dispatch.mojo
src/rng/: __init__.mojo
tests/python/: test_benchmark_posts.py  test_buffer_core.py  test_dtype_storage.py  test_jax_api.py  test_kernels_ir.py  test_kernels_usage.py  test_mojo_bench_sweep.py  test_no_numpy_core.py  test_random_api.py
(+58 files in other folders)
