[build-system]
requires = ["mohaus>=0.1,<0.2", "mojo"]
build-backend = "mohaus.backend"

[project]
name = "monpy"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["numpy>=2", "pytest>=9", "tqdm"]

[project.scripts]
monpy-bench = "monpy._bench.sweep:main"

[tool.mohaus]
mojo-src = "src"
python-src = "python"
module-name = "monpy._native"
strip = true
mojo-flags = []
generate-stub = false

[tool.ruff.lint]
ignore = ["E111", "E114"]
select = ["E", "I", "UP", "B", "ANN"]

[tool.ty]

[tool.ty.src]
exclude = ["tests/**"]

[tool.ty.rules]
all = "error"
