[build-system]
requires = [
  "mohaus>=0.1,<0.2",
  "mojo==1.0.0b1",
  "mojo-compiler==1.0.0b1",
  "mojo-compiler-mojo-libs==1.0.0b1",
  "mojo-lldb-libs==1.0.0b1",
]
build-backend = "mohaus.backend"

[project]
name = "monpy"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["numpy>=2", "pytest>=9", "tqdm", "pyyaml", "ipython>=9.13.0"]
kernels = ["max>=26.2.0", "safetensors"]

[project.scripts]
monpy-bench = "monpy._bench.sweep:main"
monpy-bench-mojo = "monpy._bench.mojo_sweep:main"
monpy-profile = "monpy._bench.profile:main"

[tool.mohaus]
mojo-flags = []
strip = true
generate-stub = false
module-name = "monpy._native"

[tool.ruff.lint]
ignore = ["E111", "E114"]
select = ["E", "I", "UP", "B", "ANN"]

[tool.ty.src]
exclude = ["tests/**"]

[tool.ty.rules]
all = "error"

[tool.uv]
extra-index-url = ["https://aarnphm.github.io/mohaus/simple"]
