[build-system]
requires = ["mohaus>=0.1", "modular"]
build-backend = "mohaus.backend"

[project]
name = "monpy"
version = "0.1.0"
requires-python = ">=3.11"
description = "Composable transformation of Numpy programs in Mojo"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Aaron Pham", email = "contact@aarnphm.xyz" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["modular"]

[dependency-groups]
dev = ["numpy>=2", "pytest>=9", "tqdm", "pyyaml", "ipython>=9.13.0"]

[project.scripts]
monpy-bench = "monpy._bench.sweep:main"
monpy-bench-mojo = "monpy._bench.mojo_sweep:main"
monpy-profile = "monpy._bench.profile:main"

[tool.mohaus]
mojo-flags = []
strip = true
generate-stub = false
module-name = "monpy._native"

[tool.ruff]
extend-include = ["*.ipynb"]
preview = true
line-length = 119
indent-width = 2

[tool.ruff.lint]
ignore = ["E111", "E114"]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.ty.src]
exclude = ["tests/**"]

[tool.ty.rules]
all = "error"

[tool.uv]
extra-index-url = [
  "https://aarnphm.github.io/mohaus/simple",
  "https://whl.modular.com/nightly/simple/",
]
prerelease = "allow"
